--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.0.13"
+        "mongoose": "^6.0.13",
+        "mongoose-slug-generator": "^1.0.4"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
