--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
         "dotenv": "^10.0.0",
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
+        "firebase": "^9.6.0",
         "joi": "^17.4.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.0.13",
-        "mongoose-slug-generator": "^1.0.4"
+        "mongoose-slug-generator": "^1.0.4",
+        "multer": "^1.4.3"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
